--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -114,13 +114,13 @@
     <ClCompile Include="Resource\Model\Tree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Util\ArgumentsUtil.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Util\FileUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Util\ShaderUtil.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Log\Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -260,13 +260,16 @@
     <ClInclude Include="Resource\Model\Raw\tree.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Util\ArgumentsUtil.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Util\FileUtil.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Util\ShaderUtil.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Log\ELogLevel.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Log\Log.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
