Implement point light

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -155,7 +155,8 @@
     <ClCompile Include="Exception\GLFWException.cpp" />
     <ClCompile Include="KeyboardEvent\KeyboardEvent.cpp" />
     <ClCompile Include="KeyboardEvent\KeyboardEventListener.cpp" />
-    <ClCompile Include="Light.cpp" />
+    <ClCompile Include="Light\AbstractLight.cpp" />
+    <ClCompile Include="Light\PointLight.cpp" />
     <ClCompile Include="Log\Log.cpp" />
     <ClCompile Include="Matrix\AbstractMatrixComponent.cpp" />
     <ClCompile Include="Matrix\RotateMatrixComponent.cpp" />
@@ -194,7 +195,9 @@
     <ClInclude Include="KeyboardEvent\EKey.hpp" />
     <ClInclude Include="KeyboardEvent\KeyboardEvent.hpp" />
     <ClInclude Include="KeyboardEvent\KeyboardEventListener.hpp" />
-    <ClInclude Include="Light.hpp" />
+    <ClInclude Include="Light\AbstractLight.hpp" />
+    <ClInclude Include="Light\ELightType.hpp" />
+    <ClInclude Include="Light\PointLight.hpp" />
     <ClInclude Include="Log\ELogLevel.hpp" />
     <ClInclude Include="Log\Log.hpp" />
     <ClInclude Include="Matrix\AbstractMatrixComponent.hpp" />
