--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="Resource\Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Resource\SkyBox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.hpp">
@@ -237,6 +240,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Render\Vertex.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Resource\SkyBox.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
