--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="Resource\ResourceManager.cpp" />
     <ClCompile Include="Resource\Shader.cpp" />
     <ClCompile Include="Resource\SkyBox.cpp" />
+    <ClCompile Include="Resource\Skydome.cpp" />
     <ClCompile Include="Resource\Texture.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Transformation.cpp" />
@@ -217,6 +218,7 @@
     <ClInclude Include="Resource\ResourceManager.hpp" />
     <ClInclude Include="Resource\Shader.hpp" />
     <ClInclude Include="Resource\SkyBox.hpp" />
+    <ClInclude Include="Resource\Skydome.hpp" />
     <ClInclude Include="Resource\Texture.hpp" />
     <ClInclude Include="Scene.hpp" />
     <ClInclude Include="Transformation.hpp" />
