--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="Resource\SkyBox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Resource\Skydome.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.hpp">
@@ -243,6 +246,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Resource\SkyBox.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Resource\Skydome.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
