More scenese and more objects

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -168,8 +168,15 @@
     <ClCompile Include="Render\Shader\BaseShader.cpp" />
     <ClCompile Include="Render\Shader\FragmentShader.cpp" />
     <ClCompile Include="Render\Shader\VertexShader.cpp" />
+    <ClCompile Include="Render\Vertex.cpp" />
     <ClCompile Include="Render\VertexBuffer.cpp" />
     <ClCompile Include="Resource\DrawableObject.cpp" />
+    <ClCompile Include="Resource\Model\Gift.cpp" />
+    <ClCompile Include="Resource\Model\Plain.cpp" />
+    <ClCompile Include="Resource\Model\Sphere.cpp" />
+    <ClCompile Include="Resource\Model\SuziFlat.cpp" />
+    <ClCompile Include="Resource\Model\SuziSmooth.cpp" />
+    <ClCompile Include="Resource\Model\Tree.cpp" />
     <ClCompile Include="Resource\ResourceManager.cpp" />
     <ClCompile Include="Resource\Shader.cpp" />
     <ClCompile Include="Resource\SkyBox.cpp" />
@@ -215,6 +222,18 @@
     <ClInclude Include="Render\VertexBuffer.hpp" />
     <ClInclude Include="Resource\DrawableObject.hpp" />
     <ClInclude Include="Resource\IResource.hpp" />
+    <ClInclude Include="Resource\Model\Gift.hpp" />
+    <ClInclude Include="Resource\Model\Plain.hpp" />
+    <ClInclude Include="Resource\Model\RawModel\gift.h" />
+    <ClInclude Include="Resource\Model\RawModel\plain.h" />
+    <ClInclude Include="Resource\Model\RawModel\sphere.h" />
+    <ClInclude Include="Resource\Model\RawModel\suzi_flat.h" />
+    <ClInclude Include="Resource\Model\RawModel\suzi_smooth.h" />
+    <ClInclude Include="Resource\Model\RawModel\tree.h" />
+    <ClInclude Include="Resource\Model\Sphere.hpp" />
+    <ClInclude Include="Resource\Model\SuziFlat.hpp" />
+    <ClInclude Include="Resource\Model\SuziSmooth.hpp" />
+    <ClInclude Include="Resource\Model\Tree.hpp" />
     <ClInclude Include="Resource\ResourceManager.hpp" />
     <ClInclude Include="Resource\Shader.hpp" />
     <ClInclude Include="Resource\SkyBox.hpp" />
